--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing=20>
     <tr>
-      <td><img src="C:\Users\tombu\Desktop\Web Development\HTML - Personal Site\tom.jpeg"></td>
+      <td><img src="C:\Users\tombu\Desktop\Web Development\HTML - Personal Site\Images\tom.jpeg"></td>
       <td>
         <h1>Tom Buscemi</h1>
         <p><em>Information Technology Specialist, Web Developer, and<strong><a href="https://linkedin.com"> Entrepreneur</a></strong></p>
